deployment/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/default-backend: nginx
    kubernetes.io/ingress.global-static-ip-name: nl
  name: ingress
  namespace: production
spec:
  rules:
  - host: openbesluitvorming.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: search
          servicePort: 80
  - host: www.openbesluitvorming.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: api.openraadsinformatie.nl
    http:
      paths:
      - path: /v1/elastic/(.*)
        backend:
          serviceName: endpoints
          servicePort: 8000
      - path: /(v1/.*)
        backend:
          serviceName: api-serve
          servicePort: 80
      - path: /v0/(.*)
        backend:
          serviceName: openstate
          servicePort: 80
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: api.openstateninformatie.nl
    http:
      paths:
      - path: /v1/elastic/(.*)
        backend:
          serviceName: endpoints
          servicePort: 8000
      - path: /(v1/.*)
        backend:
          serviceName: api-serve
          servicePort: 80
      - path: /v0/(.*)
        backend:
          serviceName: openstate
          servicePort: 80
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: api.openbesluitvorming.nl
    http:
      paths:
      - path: /v1/elastic/(.*)
        backend:
          serviceName: endpoints
          servicePort: 8000
      - path: /(v1/.*)
        backend:
          serviceName: api-serve
          servicePort: 80
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: zoek.openraadsinformatie.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: search
          servicePort: 80
  - host: zoekv0.openraadsinformatie.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: zoek.openstateninformatie.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: docs.openraadsinformatie.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: docs.openstateninformatie.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: docs.openbesluitvorming.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx
          servicePort: 80
  - host: id.openraadsinformatie.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: api-serve
          servicePort: 80
  - host: ori.argu.co
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: search
          servicePort: 80
  - host: api.waaroverheid.nl
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: loclinkvis
          servicePort: 8080
  tls:
  - secretName: tls-certificate
